# football-coach-poc

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/detection/: mod.rs  yolo.rs
src/export/: mod.rs
src/gui/: analysis_panel.rs  app.rs  heatmap_view.rs  mod.rs  pitch_overlay.rs  video_panel.rs
src/live_capture/: mod.rs
src/metrics/: coach.rs  heatmap.rs  match_analysis.rs  mod.rs  movement.rs  possession.rs  pressing.rs
src/pitch_awareness/: mod.rs
src/pitch_mapping/: mod.rs
src/tactical_insights/: mod.rs
src/tracker/: bytetrack.rs  mod.rs
src/video_processor/: decoder.rs  mod.rs
